--- a/app/views/lists/_form.html.erb
+++ b/app/views/lists/_form.html.erb
@@ -5,7 +5,7 @@
 
   <div class="form-inputs">
     <%= f.input :name %>
-    <%= f.input :picture %>
+    <%= f.input :photo, as: :file %>
   </div>
 
   <div class="form-actions">
