--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,11 +1,11 @@
-<div class="home-banner" style="background-image: url(<%= @list.picture %>)">
+<div class="home-banner">
   <h1><%= @list.name %></h1>
 </div>
 
 <div class="container">
   <h1> Información</h1>
 
-  <div class="card" style="background-image: url(<%= @list.picture %>)">
+  <div class="card">
     <div class="card-body">
       <h2 class="card-title"><%= @list.name %></h2>
       <ul class="list-group">
@@ -22,6 +22,7 @@
         <%= image_tag bookmark.movie.poster_url %>
         <div class="card-body">
           <h4><%= bookmark.movie.title %></h4>
+          <p><%= bookmark.movie.overview %></p>
           <li class="list-group-item"><%= bookmark.comment %></li>
           <%= link_to "Remove",
                 bookmark_path(bookmark),
