--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -4,13 +4,12 @@
 
 <div class="container">
   <h1>Mis Listas <%= link_to 'New', new_list_path, class:"btn btn-primary" %></h1>
-  <div class="card-grid">
+  <div class="row">
     <% @lists.each do |list| %>
-      <div class="card">
+      <div class="col-12 col-lg-3 card">
         <%= cl_image_tag list.photo.key, crop: :fill, class:"card-img-top" %>
         <div class="card-body">
           <h3 class="card-title"><%= list.name %></h3>
-          <p class="card-text"><%= list.created_at %></p>
           <%= link_to 'More Info', list, class: "btn btn-primary"%>
           <%= link_to 'Edit', list, class: "btn btn-secondary"%>
           <%= link_to 'Destroy', list, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-secondary" %>
