--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -16,9 +16,9 @@
     </div>
   </div>
 
-  <div class="card-grid">
+  <div class="row">
     <% @list.bookmarks.each do |bookmark| %>
-      <div class="card">
+      <div class="col-12 col-lg-3 card">
         <%= image_tag bookmark.movie.poster_url %>
         <div class="card-body">
           <h4><%= bookmark.movie.title %></h4>
